# ClinIQ

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLINIQ_BUILD_TASK.md  CONTRIBUTING.md  Makefile  README.md  cliniq-16-month-roadmap.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/schemas/: __init__.py  analysis.py  auth.py  batch.py  common.py  icd.py  ner.py  risk.py  summary.py
backend/app/api/v1/: __init__.py  deps.py  schemas.py
backend/app/api/v1/routes/: __init__.py  abbreviations.py  allergies.py  analyze.py  assertions.py  auth.py  batch.py  classify.py  comorbidity.py  conversation.py  deidentify.py  drift.py  enhanced_analyze.py  evaluation.py  health.py  icd.py  medications.py  metrics.py  (+13 more)
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  sanitize.py
backend/app/ml/: __init__.py  enhanced_pipeline.py  pipeline.py
backend/app/ml/abbreviations/: __init__.py  expander.py
backend/app/ml/allergies/: __init__.py  extractor.py
backend/app/ml/assertions/: __init__.py  detector.py
backend/app/ml/classifier/: __init__.py  document_classifier.py
backend/app/ml/comorbidity/: __init__.py  charlson.py
backend/app/ml/deidentification/: __init__.py  detector.py
backend/app/ml/dental/: __init__.py  model.py
backend/app/ml/explainability/: __init__.py  shap_explainer.py
backend/app/ml/icd/: __init__.py  model.py
backend/app/ml/medications/: __init__.py  extractor.py
backend/app/ml/monitoring/: __init__.py  drift_detector.py  metrics_collector.py
backend/app/ml/ner/: __init__.py  model.py
backend/app/ml/normalization/: __init__.py  normalizer.py
backend/app/ml/quality/: __init__.py  analyzer.py
backend/app/ml/relations/: __init__.py  extractor.py
backend/app/ml/risk/: __init__.py  model.py  scorer.py
backend/app/ml/sdoh/: __init__.py  extractor.py
backend/app/ml/search/: __init__.py  conversation_memory.py  hybrid.py  query_expansion.py  reranker.py
backend/app/ml/sections/: __init__.py  parser.py
backend/app/ml/serving/: __init__.py  onnx_runtime.py
backend/app/ml/summarization/: __init__.py  model.py
backend/app/ml/temporal/: __init__.py  extractor.py
backend/app/ml/utils/: __init__.py  advanced_metrics.py  circuit_breaker.py  feature_engineering.py  inference_cache.py  metrics.py  retry.py  text_preprocessing.py  validation.py
backend/app/ml/vitals/: __init__.py  extractor.py
backend/app/services/: __init__.py  analysis.py  document_service.py  model_registry.py
backend/tests/: __init__.py  conftest.py  test_allergies_route.py  test_allergy_extractor.py  test_assertion_detector.py  test_assertions_route.py  test_classify_route.py  test_concept_normalizer.py  test_conversation_memory.py  test_conversation_route.py  test_document_classifier.py  test_enhanced_analyze_route.py  test_enhanced_pipeline.py  test_medication_extractor.py  test_medications_route.py  test_normalization_route.py  test_quality_analyzer.py  test_quality_route.py  test_query_expansion.py  test_relation_extractor.py  test_relations_route.py  test_reranker.py  test_sdoh_extractor.py  test_sdoh_route.py  test_section_parser.py  test_sections_route.py  test_temporal_extractor.py  test_temporal_route.py  test_vitals_extractor.py  test_vitals_route.py
backend/tests/api/: test_abbreviations_route.py
backend/tests/integration/: test_api.py  test_clinical_endpoints.py
backend/tests/load/: locustfile.py
backend/tests/ml/: __init__.py  test_abbreviation_expander.py  test_model_smoke.py
backend/tests/unit/: test_abstractive_summarizer.py  test_advanced_metrics.py  test_analysis_service.py  test_analyze_route.py  test_auth_get_current_user.py  test_auth_middleware.py  test_auth_route.py  test_batch_route.py  test_batch_schema_validator.py  test_charlson_calculator.py  test_circuit_breaker.py  test_comorbidity_route.py  test_composite_ner.py  test_config.py  test_configure_logging.py  test_coverage_final.py  test_db_session.py  test_deidentification.py  test_deidentify_route.py  test_dental.py  test_dental_model_extended.py  test_deps.py  test_deps_get_current_user.py  test_document_classifier_extended.py  test_document_service.py  test_document_service_extended.py  test_drift_detector.py  test_drift_route.py  test_evaluation_route.py  test_exceptions.py  test_extractive_summarizer.py  test_feature_engineering.py  test_health_route.py  test_hybrid_search.py  test_icd.py  test_icd_route.py  test_inference_cache.py  test_logging_middleware.py  test_logging_middleware_extended.py  test_main_app.py  (+42 more)
sdk/: README.md  pyproject.toml
sdk/cliniq_client/: __init__.py  client.py  models.py
sdk/tests/: __init__.py  test_client.py  test_models.py
(+176 files in other folders)
