[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliniq"
version = "0.1.0"
description = "Clinical Intelligence & Query Platform - AI-powered clinical NLP"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ClinIQ Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.6",
    # Caching & Task Queue
    "redis>=5.0.0",
    "celery>=5.3.0",
    # ML Core
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    # NLP & Biomedical
    "spacy>=3.7.0",
    "scispacy>=0.5.4",
    "en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_lg-0.5.4.tar.gz",
    # ML Ops
    "mlflow>=2.9.0",
    "onnxruntime>=1.16.0",
    # Text Processing
    "nltk>=3.8.0",
    "regex>=2023.10.0",
    # Utilities
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
]
training = [
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "optuna>=3.5.0",
]

[project.scripts]
cliniq = "cliniq.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "E741",   # ambiguous variable name (common in ML code)
    "B008",   # function calls in argument defaults
    "B017",   # blind exception in pytest.raises (acceptable in tests)
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in FastAPI deps)
    "ARG002", # unused method argument (common in base/interface methods)
    "ARG005", # unused lambda argument (common in mock callbacks)
    "SIM117", # nested with statements (sometimes clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]  # test files often mock modules before importing

[tool.ruff.lint.isort]
known-first-party = ["cliniq", "app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "ml: marks tests that require ML models",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
