[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliniq-client"
version = "0.2.0"
description = "Python SDK for the ClinIQ Clinical NLP API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ClinIQ Team" }]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.30.0"]
